# qt_rtp_av_server

./: CMakeLists.txt  ChatDialog.qml  README.md  RtpAVServer_zh_CN.ts  WriteDataDevice.cpp  WriteDataDevice.h  audiocapture.cpp  audiocapture.h  cameracapture.cpp  cameracapture.h  main.cpp  main.qml  qml.qrc  test.txt  udpclient.cpp  udpclient.h  udpserver.h  videoaudiomux.cpp  videoaudiomux.h
MicphoneRtp/: CMakeLists.txt  main.cpp  main.qml
MicphoneRtp/src/: Bits.h  WriteDataDevice.cpp  WriteDataDevice.h  audiocapture.cpp  audiocapture.h  udpclient.cpp  udpclient.h
Real-timeAudioTransmission/RtpSapDemo/mast-main/tests/fixtures/: dante-aes67-1.sdp  rfc7273-example-4.8.1.sdp  xnode-l24-48000-2.sdp
